- start readme - fix to reported version - still something around that's reporting 1.0 though - expand pyproject

--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,8 @@ name = "pypi"
 [packages]
 timecode = "*"
 ffmpeg-python = "*"
+importlib-metadata = "*"
+get-media-duration = {file = "."}
 
 [dev-packages]
 
